--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,12 +21,13 @@
     position: absolute
     width: 100%
     height: 100px
-    padding-top: 0
+    padding-top: 10px
     font-size: 23px
-    font-weight: 600
+    font-weight: 400
+    
     &_list
         display: flex
-        justify-content: space-around
+        justify-content: space-between
         align-items: center
         list-style-type: none
         &_item
@@ -34,10 +35,15 @@
             margin-right: 10px
             &_logo
                 display: flex
+                &_img
+                    margin-right: 10px
                 &_text
-                    margin-right:  480px
+                    margin-right:  430px
+                    font-size: 32px
+                    text-transform: uppercase
             a
                 text-decoration: none
+                
                 &:hover
                     color: #CD6326
                 i
@@ -45,7 +51,7 @@
                         color: #CD6326
             &_btn
                 border: 2px solid #CD6326
-                border-radius: 10px
+                border-radius: 4px
                 width: 120px
                 height: 50px
                 
@@ -61,16 +67,17 @@
     min-height: 780px
     width: 100%
     background: url(../img/main_bg.png) center (center/cover) no-repeat
-    padding: 200px 0 250px 0
+    padding: 210px 0 250px 0
     &_title
         
+        font-weight: normal
         font-size: 48px
-        font-weight: 400
         color: #CD6326
     &_text
-        margin-top: 51px
+        margin-top: 55px
+        font-weight: normal
         font-size: 18px
-        font-weight: 400
+        line-height: 27px
     &_btn
         margin-top: 50px
         width: 160px
@@ -181,8 +188,15 @@
         list-style-type: none
         &_item
             position: relative
+            margin-right: 10px
             &_logo
                 display: flex
+                &_img
+                    margin-right: 10px
+                &_text
+                    font-size: 32px
+                    text-transform: uppercase
+                    
                 
             &_link
                 display: flex
