--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,6 @@
-
-
 *
 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif
     box-sizing: border-box
     color: white
     margin: 0
@@ -88,10 +86,10 @@
         font-weight: 400
         border: none
         &:hover
-            cursor: default
+            cursor: pointer
             background-color: #CD6326
         &:focus
-            cursor: default
+            cursor: pointer
             background-color: #8F5613
 
 .articles
@@ -120,7 +118,7 @@
         align-items: center
         &_chevron
             &:hover
-                cursor: 
+                cursor: pointer 
         &_card
             text-align: center
             position: relative
